Fixed miscoloring in truncated blog post titles

--- a/www/static/css-src/_blog.scss
+++ b/www/static/css-src/_blog.scss
@@ -58,6 +58,7 @@
                     text-overflow: ellipsis;
                     overflow: hidden;
                     white-space: nowrap;
+                    color: $brand-primary-darker;
                 }
 
                 div:nth-of-type(2){
